plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5' // ✅ 안정 호환
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.kbsw'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

// 실행 불가능한 기본 jar 생성을 막고, 실행 가능한 bootJar만 남김
jar {
    enabled = false
}


dependencies {
    // Web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // ✅ OAuth2 Client for Google Login
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // ✅ JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // JPA & DB
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.h2database:h2' // 개발용 인메모리 DB

    // REST & Actuator
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Validation & Security
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // OpenFeign
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.3'

    // 기타
    implementation 'com.google.code.gson:gson:2.9.0'
    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4:1.16'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // dotenv
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'

    // ✅ OpenAPI Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    //firebase
    implementation 'com.google.firebase:firebase-admin:9.1.1'
    implementation 'com.google.cloud:google-cloud-storage:2.27.0'
}

tasks.named('test') {
    useJUnitPlatform()
}